[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-geyser-plugin-interface"
description = "The Wickandbergamot Geyser plugin interface."
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-geyser-plugin-interface"

[dependencies]
log = "0.4.17"
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
