[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-manager"
description = "The Safecoin Geyser plugin manager."
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
json5 = "0.4.1"
libloading = "0.7.3"
log = "0.4.11"
serde_json = "1.0.79"
solana-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.10.32" }
safecoin-measure = { path = "../measure", version = "=1.10.32" }
safecoin-metrics = { path = "../metrics", version = "=1.10.32" }
solana-rpc = { path = "../rpc", version = "=1.10.32" }
safecoin-runtime = { path = "../runtime", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.10.32" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
