[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-geyser-plugin-manager"
description = "The Wickandbergamot Geyser plugin manager."
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
json5 = "0.4.1"
libloading = "0.7.3"
log = "0.4.17"
serde_json = "1.0.81"
wickandbergamot-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-metrics = { path = "../metrics", version = "=1.14.17" }
wickandbergamot-rpc = { path = "../rpc", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
